﻿			     BZFlag Release Notes
			     ====================

BZFlag 2.0.3
------------

* The url now does not contain the password (sent with POST) - Tupone Alfredo
* Fixing Tiny tank shooting from the world edge - Tupone Alfredo
* Fixing client requesting lan server on some systems - Tupone Alfredo
* Observer are no more hunted - Tupone Alfredo
* Added 'Always Show Team Scores' option (GUI Options Menu) - Mark Thomas
* Added beautify scores - Julio Jimenez
* Added scoreboard sort option - Mark Thomas, Karsten Behrmann ('BearPerson')
* Ricochet is performed on shots fired over the boundary wall - Daniel Remenak
* Increase range of radar size setting in GUI Option menu - Mark Thomas
* Fixed Menu rendering when radar size is great - Sean Morrison, Mark Thomas
* Fixed Linux name resolution (server list) problem - Sean Morrison
* Fixed Jitter problem on Windows, clock was wrong - Alfredo Tupone
* Windows platform can switch from SDL to native - Alfredo Tupone
* Instruction for X-build from linux to windows - Alfredo Tupone
* bzflag is much less blocking with libcurl - Alfredo Tupone
* Using c-ares instead of adns for DNS resolving - Alfredo Tupone
* Added CTF capture event trigger for world weapons - Jeff Myers, Nathan Goings
* FlipZ on meshpyrs behaves as expected (like pyramids) - Daniel Remenak
* Fixed /set and /reset command case bug - Daniel Remenak
* Fixed crash on /ban without -banfile - Daniel Remenak
* Shot reload timer on the HUD - Daniel Remenak
* Added timestamp to bzfs DEBUG output, and new CL option (-ts) - Mark Thomas
* Players without TALK can send to the Admin group - Sean Morrison
* Fixed bzfs crash because poll kick/ban - Julio Jimenez
* Allow additional group modify permission lines - Frank Evers
* bzfs creates default groups before parsing groupdb file - Frank Evers
* +ALL and -ALL adds/removes all perms from a group in groupdb - Frank Evers
* Support for +,- and ! operators in bzfs' groupdb file - Frank Evers
